MODPUBSUB-217 fixed failed tests